--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "electron": "^10.1.2",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-icons": "^2.1.0"
   }
 }
